2022-08-01
    Updated docs to v0.70
2022-07-10
    New functions:
      void MsvgGetInheritedFontFamily(const MsvgElement *el, int *ifont_family,
                                      char **sfont_family);
    Added bfontlib funcionality with new functions:
      int MsvgBFontLibLoad(MsvgElement *el);
      int MsvgBFontLibLoadFromFile(char *fname);
      MsvgBFont *MsvgBFontLibFind(char *sfont_family, int ifont_family);
      void MsvgBFontLibFree(void);
      MsvgElement *MsvgTextToPathGroupUsingBFontLib(MsvgElement *el);
      int MsvgBFontLibGetNumOfFonts(void);
      MsvgBFont *MsvgBFontLibGetBFontByNumber(int nfont);
      void MsvgBFontLibSetDefaultBfont(int nfont);
    Changed test/tfont.c and mgrx/showsvg.c to use the fontlib functions.
2022-07-06
    Moved MsvgProcPaintCtxInheritance(MsvgPaintCtx and
    MsvgProcPaintCtxDefaults from sec/serializ.c to src/paintctx.c
    New functions:
      double MsvgGetCharAdvx(long unicode, double font_size, MsvgBFont *bfont);
      double MsvgGetStrAdvx(char *text, double font_size, MsvgBFont *bfont);
      int MsvgGetInheritedTextAnchor(const MsvgElement *el);
      double MsvgGetInheritedFontSize(const MsvgElement *el);
    MsvgTextToPathGroup now have inheritance in account for font_size and
    text_anchor.
2022-07-04
    Changes to the MGRX tests:
    reworked rendmgrx.c to use transformation for rotating, pan and zooming.
2022-07-02
    Updated docs to v0.60
2022-07-02
    Added gfont subdir with three svg fonts, derived from Free GNU fonts.
    When converting from cooked to raw tree path and poly data do a line
    break every MAX_COORD_PER_LINE.
    Solved bug in MsvgPruneElement.
    Changed function name MsvgPathEltoPolyEl to MsvgSubPathToPoly.
    New function:
      MsvgElement *MsvgPathToPolyGroup(MsvgElement *el, double px_x_unit);
    When writing a svg file convert [&"'<>] to the xml entities for parameter
    values and contents.
    New test/tpa2poly.c program to test MsvgPathToPolyGroup.