@@ -1,3 +1,7 @@
+2022-10-20
+    Hack to MGRX for drawing path elements with subpaths, check if every polygon
+    is inside the last polygon and use the background color, so glyphs like "ià"
+    can be rendered.
 2022-08-01
     Updated docs to v0.70
 2022-07-10
